force-app/main/default/objects/Patient__c/fields/Emergency_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Phone__c</fullName>
    <label>Emergency Phone</label>
    <type>Phone</type>
</CustomField>