force-app/main/default/objects/Patient__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (cm)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>